# study_ai

./: .env.example  .gitignore  .npmrc  README.md  agent_app.py  agent_bridge.py  cc_switch_config.py  chatbot.py  index.html  jsconfig.json  package.json  pnpm-lock.yaml  project.md  pyproject.toml  readme.md  requirements.txt  tsconfig.electron.json  tsconfig.json  vite.config.ts  web_app.py
agent-server/: agent_bridge.py  agent_tools.py  model_config.py  pyproject.toml  requirements.txt  zhipu_agent.py
agent-server/agent_tools/: __init__.py  time_tool.py  utils.py
agent-server/config/: model_config.example.json  skills.example.json
agent-server/electron/: main.js  preload.cjs
agent-server/python/agent_server/: __init__.py  bridge.py  model_config.py  rag.py  skills.py  zhipu_agent.py
agent-server/python/agent_server/skill_defs/: __init__.py  computer_use.py  location_weather.py  time.py  web_research.py
agent-server/python/agent_server/tools/: __init__.py  computer_tool.py  location_tool.py  read_webpage_tool.py  weather_tool.py  web_search_tool.py
agent-server/relay/: __init__.py  agentscope_bridge.py  demo.py  schemas.py  server.py  state.py
agent-server/relay/agents/: __init__.py  base.py  plan_agent.py  sub_agents.py
agent-server/relay/builtin_skills/: agent-code-lab.skill.json  ai-learning.skill.json
agent-server/relay/mcp/: registry.py
agent-server/relay/skills/: loader.py
agent-server/relay_agent_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-server/var/: token_usage.json
agent-web/: index.html  vite.config.js
(+37 files in other folders)
