[project]
name = "pdf-rag-chatbot"
version = "0.1.0"
description = "A PDF RAG chatbot with multi-column extraction, optional OCR, and ChromaDB storage."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "chromadb>=0.5.0",
  "fastapi>=0.115.0",
  "openai>=1.40.0",
  "pillow>=10.0.0",
  "pymupdf>=1.24.0",
  "python-multipart>=0.0.9",
  "pytesseract>=0.3.10",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "reportlab>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

